--- a/Group Project Proposal.ipynb
+++ b/Group Project Proposal.ipynb
@@ -1,6 +1,52 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "2dc2be9a-5e70-476a-a008-64157c0e5802",
+   "metadata": {},
+   "source": [
+    "**GROUP PROJECT PROPOSAL**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70112127-ecd4-4efd-8cd1-b7a467375c53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a8fdc39-81ca-4f5a-b3e9-3d163753f1e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.2.2"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
