--- a/Group Project Proposal.ipynb
+++ b/Group Project Proposal.ipynb
@@ -9,19 +9,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70112127-ecd4-4efd-8cd1-b7a467375c53",
+   "cell_type": "markdown",
+   "id": "cd763147-fda4-4f2a-a7c6-6e7084e2904d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a = 5"
+    "# **USING AGE, HEARTRATE, AND CHOLESTROL TO CLASSIFY HEART PATIENTS IN CLEVELAND**\n",
+    "#### ARYAN JAIN, KATIE LIANG, MADILYN PORTAS, VIBHAV"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a8fdc39-81ca-4f5a-b3e9-3d163753f1e8",
+   "id": "b1defa50-c742-4361-b135-a2a88f2ad8c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34e6982f-53f7-4daf-a0bb-8964bad2640c",
    "metadata": {},
    "outputs": [],
    "source": []
