--- a/Group Project Proposal.ipynb
+++ b/Group Project Proposal.ipynb
@@ -18,22 +18,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1defa50-c742-4361-b135-a2a88f2ad8c0",
+   "cell_type": "markdown",
+   "id": "901dbfde-4fc0-450c-9453-4b19b3d18a69",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a <- 5"
+    "### The term cadio vascular disease "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34e6982f-53f7-4daf-a0bb-8964bad2640c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
