--- a/Group Project Proposal.ipynb
+++ b/Group Project Proposal.ipynb
@@ -461,7 +461,7 @@
     "#spliting the data\n",
     "heart_split <- initial_split(heart_data, prop = 0.75, strata = num)\n",
     "heart_training <- training(heart_split)\n",
-    "heart_testing <- testing(heart_splitz)"
+    "heart_testing <- testing(heart_split)"
    ]
   },
   {
