Update Group Project Proposal.ipynb

--- a/Group Project Proposal.ipynb
+++ b/Group Project Proposal.ipynb
@@ -22,7 +22,7 @@
    "id": "901dbfde-4fc0-450c-9453-4b19b3d18a69",
    "metadata": {},
    "source": [
-    "## Introduction\n",
+    "## INTRODUCTION\n",
     "\n",
     "Heart disease, also known as cardiovascular disease, encompasses various heart conditions arising from issues in the heart and blood vessels. One such condition is coronary artery disease, which occurs when the arteries that supply blood to the heart become narrowed. There are several risk factors associated with the development of this disease, such as high blood pressure levels and the maximum heart rate a person can achieve. Additionally, age plays a significant role, as older individuals are more susceptible to being diagnosed with heart disease.\n",
     "\n",
