--- a/Group Project Proposal.ipynb
+++ b/Group Project Proposal.ipynb
@@ -13,8 +13,8 @@
    "id": "cd763147-fda4-4f2a-a7c6-6e7084e2904d",
    "metadata": {},
    "source": [
-    "# **Predicting Heart Disease Using DATA SCIENCE**\n",
-    "#### ARYAN JAIN, KATIE LIANG, MADILYN PORTAS, VIBHAV"
+    "# **Predicting Heart Disease: Analyzing Age, Blood Pressure, and Maximum Heart Rate**\n",
+    "#### ARYAN JAIN, KATIE LIANG, MADILYN PORTAS, VIBHAV DAMANI"
    ]
   },
   {
@@ -45,24 +45,26 @@
    "source": [
     "We are using the Heart Disease Database (Hungarian data) to predict whether patients have heart disease. The dataset has 294 observations, and includes 14 numerical variables. \n",
     "Key variables:\n",
-    "\"age\": Patient's age in years.\n",
-    "\"sex\": Patient's gender (1 stands for male and 0 for female).\n",
-    "\"cp\": The type of chest pain the patient is experiencing.\n",
-    "\"trestbps\": Patient's resting blood pressure on admission (mmHg).\n",
-    "\"chol\": Patient's serum cholesterol (mg/dl).\n",
-    "\"fbs\": Whether the patient has fasting blood sugar levels greater than 120 mg/dl, (1 for \"True\" and 0 for \"False\").\n",
-    "\"restecg\": Results of the patient's resting electrocardiogram.\n",
-    "\"thalach\": Maximum heart rate the patient achieved.\n",
-    "\"exang\": Whether the patient experiences exercise-induced angina (1 for \"True\" and 0 for \"False\").\n",
-    "\"oldpeak\": Represents ST depression induced by exercise relative to rest.\n",
-    "\"slope\": Slope of the peak exercise ST segment.\n",
-    "\"ca\": The number of major vessels colored by fluoroscopy.\n",
-    "\"thal\": The patient's thalassemia.\n",
-    "\"num\": Diagnosis of heart disease (1 stands for heart disease and 0 for no diagnosis). \n",
+    "- \"age\": Patient's age in years.\n",
+    "- \"sex\": Patient's gender (1 stands for male and 0 for female).\n",
+    "- \"cp\": The type of chest pain the patient is experiencing.\n",
+    "- \"trestbps\": Patient's resting blood pressure on admission (mmHg).\n",
+    "- \"chol\": Patient's serum cholesterol (mg/dl).\n",
+    "- \"fbs\": Whether the patient has fasting blood sugar levels greater than 120 mg/dl, (1 for \"True\" and 0 for \"False\").\n",
+    "- \"restecg\": Results of the patient's resting electrocardiogram.\n",
+    "- \"thalach\": Maximum heart rate the patient achieved.\n",
+    "- \"exang\": Whether the patient experiences exercise-induced angina (1 for \"True\" and 0 for \"False\").\n",
+    "- \"oldpeak\": Represents ST depression induced by exercise relative to rest.\n",
+    "- \"slope\": Slope of the peak exercise ST segment.\n",
+    "- \"ca\": The number of major vessels colored by fluoroscopy.\n",
+    "- \"thal\": The patient's thalassemia.\n",
+    "- \"num\": Diagnosis of heart disease (1 stands for heart disease and 0 for no diagnosis). \n",
     "\n",
     "\n",
     "We replaced \"?\" values with \"NA.\" We divided the dataset into a 75% training set and a 25% testing set using \"initial_split.”\n",
+    "\n",
     "We explored the data by grouping it based on \"num\" and calculated the minimum, maximum, and average values for \"age,\" \"trestbps,\" and \"thalach.\" We observed that patients with heart disease tend to have higher \"age\" and \"trestbps\" values, but lower \"thalach\" values compared to those without heart disease, which was supported by visualizations created by plotting various numerical variables against each other, and coloring the data points based on \"num.\"\n",
+    "\n",
     "As a result, we selected \"age,\" \"trestbps,\" and \"thalach\" as the key predictor variables for our analysis.\n"
    ]
   },
