--- a/Group Project Report-Copy1.ipynb
+++ b/Group Project Report-Copy1.ipynb
@@ -31,20 +31,39 @@
    "id": "cc6fc719-81b5-48ad-8cee-3f5a4f45a7d3",
    "metadata": {},
    "source": [
-    "The term heart (cardiovascular) disease describes a range of heart conditions that arise from problems with the heart and blood vessels. One of these is coronary artery disease, which is when the arteries supplying blood to the heart narrow. Many risk factors can increase the chance of developing this disease, including cholesterol levels and maximum heart rate.\n",
+    "Cardiovascular disease encompasses a spectrum of cardiac conditions originating from malfunctions within the cardiac and vascular systems. Among these, coronary artery disease (CAD) manifests when the arteries responsible for supplying blood to the heart undergo a narrowing process. Numerous risk factors contribute to the predisposition for this malady, including elevated cholesterol levels and the maximum heart rate attained during physiological exertion.\n",
     "\n",
-    "High levels of cholesterol result in fatty deposits in blood vessels that clog them, making it difficult for enough blood to flow through the arteries. When these deposits break suddenly, they form a clot resulting in a heart attack or stroke. If a patient has heart disease, their maximum heart rate could significantly decrease (WebMD, 2002).\n",
+    "Elevated cholesterol levels precipitate the accumulation of lipid deposits within the vasculature, impeding the smooth flow of blood through the arteries. The rupture of these deposits may culminate in the formation of a thrombus, thereby instigating severe cardiovascular events such as myocardial infarction or stroke. Notably, individuals afflicted by heart disease may experience a notable reduction in their maximum heart rate, as indicated by medical insights provided by WebMD in 2002.\n",
     "\n",
-    "Thus, our question is: Is a new patient likely to have heart disease, based on serum cholesterol and maximum heart rate achieved? To answer this, we will use a knn classifier algorithm."
+    "In light of these considerations, the pertinent query arises: can the likelihood of an individual being afflicted by heart disease be ascertained based on an analysis of serum cholesterol levels and the maximum heart rate achieved? To address this question, we propose the utilization of a k-nearest neighbors (KNN) classifier algorithm, an analytical tool with demonstrated efficacy in pattern recognition and classification tasks. By employing this algorithm, we aim to discern discernible patterns and relationships between the aforementioned physiological parameters and the presence of heart disease in a new patient."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39bc682f-0a85-4c8d-ab8c-c3cd0f3466e0",
+   "cell_type": "markdown",
+   "id": "5459dc14-a8c6-4cfd-add2-1cfade13a79c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our study involves the utilization of the \"processed.hungarian.data\" dataset extracted from the Heart Disease Database for the predictive assessment of heart disease presence in patients from Cleveland. The dataset comprises several pertinent variables, and our focus is on utilizing the variables \"chol\" (serum cholesterol level) and \"thalach\" (maximum heart rate achieved) as predictive features.\n",
+    "\n",
+    "The specific columns within the dataset are defined as follows:\n",
+    "\n",
+    "1. **age**: Age of the patient\n",
+    "2. **sex**: Gender of the patient (1 = male, 0 = female)\n",
+    "3. **cp**: Chest pain type\n",
+    "4. **trestbps**: Resting blood pressure in mmHg\n",
+    "5. **chol**: Serum cholesterol level in mg/dl\n",
+    "6. **fbs**: Fasting blood sugar > 120 mg/dl? (1 = True, 0 = False)\n",
+    "7. **restecg**: Resting electrocardiographic results\n",
+    "8. **thalach**: Maximum heart rate achieved\n",
+    "9. **exang**: Whether exercise induced angina (1 = True, 0 = False)\n",
+    "10. **oldpeak**: ST depression induced by exercise, relative to rest\n",
+    "11. **slope**: The slope of the peak exercise ST segment (1 = upslope, 2 = flat, 3 = downslope)\n",
+    "12. **ca**: Number of major vessels (0-3) colored by fluoroscopy\n",
+    "13. **thal**: Thalassemia classification (3 = normal, 6 = fixed defect, 7 = reversible defect)\n",
+    "14. **num**: Diagnosis of heart disease (1, 2, 3, 4 = presence, 0 = no presence)\n",
+    "\n",
+    "For our analysis, we aim to employ the \"chol\" and \"thalach\" variables as predictors to discern the presence or absence of heart disease in patients. This predictive task aligns with the broader objective of leveraging relevant clinical data to enhance diagnostic capabilities and contribute to the advancement of cardiovascular health assessment methodologies."
+   ]
   },
   {
    "cell_type": "code",
