--- a/Group Project Report-Copy1.ipynb
+++ b/Group Project Report-Copy1.ipynb
@@ -13,7 +13,7 @@
    "id": "3f4d1811-944c-423a-b4f3-faf2378be21c",
    "metadata": {},
    "source": [
-    "## **SERUM CHOLESTROL AND MAXIMUM HEART RATE ACHIEVED TO DIAGNOSE HEART DISEASE PATIENTS FROM HUNGARY**\n",
+    "# **SERUM CHOLESTROL AND MAXIMUM HEART RATE ACHIEVED TO DIAGNOSE HEART DISEASE PATIENTS FROM HUNGARY**\n",
     "\n",
     "Aryan Jain, Vibhav "
    ]
@@ -23,7 +23,7 @@
    "id": "14fab048-b878-4e5f-a53f-13e67e7d5826",
    "metadata": {},
    "source": [
-    "### INTRODUCTION"
+    "## INTRODUCTION"
    ]
   },
   {
@@ -66,9 +66,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f19f9d5-a7f9-4ee0-9d9d-9e12a74bba60",
+   "metadata": {},
+   "source": [
+    "### Methodology\n",
+    "\n",
+    "Data Preprocessing and Exploratory Data Analysis\n",
+    "\n",
+    "We initiated our study by importing relevant libraries and acquiring the \"processed.cleveland.data\" dataset from an authenticated online source. Subsequently, a meticulous data preprocessing phase ensued, wherein we applied systematic cleaning and tidying procedures to render the dataset amenable for analytical endeavors. This process involved judiciously assigning appropriate column types and introducing a new column labeled as \"diag\" to enhance the interpretability of the data.\n",
+    "\n",
+    "To facilitate subsequent analytical procedures, we judiciously partitioned the dataset into distinct training and testing sets. It is noteworthy that our analytical focus remained exclusively on the training set until the final stages of the investigation.\n",
+    "\n",
+    "A comprehensive summary of the training set was generated, laying the groundwork for subsequent predictive modeling. This involved the extraction of key insights and patterns from the training data to inform the desired behavior and performance criteria of our classifier.\n",
+    "\n",
+    "Visualization emerged as an integral component of our exploratory analysis. Specifically, we employed graphical representations to elucidate the intricate relationship between the variables \"thalac\" (maximum heart rate achieved) and \"chol\" (serum cholesterol level). This visual exploration was pivotal in fostering a nuanced understanding of the distributional characteristics inherent in the dataset, thereby contributing to the refinement of subsequent analytical strategies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43692b3e-d348-44f9-a599-d7202687fc9b",
+   "metadata": {},
+   "source": [
+    "### Determining Optimal k for K-Nearest Neighbors Classifier\n",
+    "\n",
+    "The objective of this phase in our investigation is to ascertain the optimal value for the parameter 'k' in the k-nearest neighbors (KNN) algorithm, thereby maximizing the accuracy of our predictive model. The subsequent methodology encapsulates a systematic approach towards achieving this goal.\n",
+    "\n",
+    "1. **Data Preprocessing and Scaling:**\n",
+    "   We commence by applying the recipe function to center and scale the training data, a crucial step in normalizing variables to a standardized range, facilitating robust and unbiased model training.\n",
+    "\n",
+    "2. **Cross-Validation Technique:**\n",
+    "   Cross-validation, an integral aspect of our methodological framework, is executed with ten folds on the training dataset. This deliberate choice of employing ten folds serves to mitigate the influence of the specific observations in the validation set, thus enhancing the robustness and generalizability of our model.\n",
+    "\n",
+    "3. **K-Nearest Neighbors Model Initialization:**\n",
+    "   The KNN model is instantiated with the parameter 'neighbours' set to 'tune()', indicative of a deliberate intention to identify the most optimal value for 'k' through subsequent tuning.\n",
+    "\n",
+    "4. **Workflow Integration:**\n",
+    "   The recipe and the KNN model are seamlessly integrated into a workflow, with the 'tune_grid' function employed to systematically explore a range of 'k' values specified in 'gridvals' during cross-validation.\n",
+    "\n",
+    "5. **Determining Optimal k:**\n",
+    "   The optimal 'k' value is discerned by filtering for accuracy and visualizing the accuracy estimate against the 'k' values through a line plot. This graphical representation serves to elucidate the relationship between 'k' and accuracy, guiding the selection of the most advantageous 'k' value.\n",
+    "\n",
+    "6. **Model Evaluation and Validation:**\n",
+    "   Rigorous evaluation ensues to ensure that the selected 'k' value averts both underfitting and overfitting. Furthermore, a comparative analysis against a majority classifier is conducted to validate the efficacy of our model, affirming its superiority in predictive accuracy.\n",
+    "\n",
+    "This methodological framework adheres to rigorous standards, leveraging cross-validation and systematic exploration to identify the optimal 'k' for the KNN algorithm, thus enhancing the robustness and reliability of our predictive model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53630bd5-955b-413e-90a9-941f24ed415c",
+   "metadata": {},
+   "source": [
+    "### Visualizing our results\n",
+    "\n",
+    "To visualize our results, we plotted max heart rate on the x-axis and cholesterol levels on the y-axis, using diagnosis to colour the points.\n",
+    "\n",
+    "To check for over/underfitting, we coloured the background of the graph based on what prediction would be made at every possible point. This also allowed us to quickly identify how the model classified patients, and where the boundaries were."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea45fa8a-3db0-4f22-ac74-952f518b5741",
+   "metadata": {},
+   "source": [
+    "### Testing our classifier\n",
+    "\n",
+    "Made a new model specification for the best  value chosen, combined with the recipe made earlier in a workflow, and fit the classifier to our training set.\n",
+    "\n",
+    "Used predict on the testing set to evaluate the classifier's predicition accuracy on data it hadn't seen before.\n",
+    "\n",
+    "Produced a confusion matrix to get a sense of which diagnoses the classifier was more accurate at giving, and what effects that has on real world application.\n",
+    "\n",
+    "Tested the accuracy of our classifier when given data from Hungary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b908e655-b38a-48e8-862d-bc53f9978451",
+   "metadata": {},
+   "source": [
+    "## Preprocessing and exploratory data analysis\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ab595f2-0e87-4794-97c7-1c34fec493bc",
+   "id": "684d36c0-d5ee-4b96-a210-50091a793340",
    "metadata": {},
    "outputs": [],
    "source": []
