--- a/Group Project Report-Copy1.ipynb
+++ b/Group Project Report-Copy1.ipynb
@@ -322,9 +322,286 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92b5669b-f537-465d-8f52-3e14252149ff",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Data Cleaning and Structuring\n",
+    "\n",
+    "The presence of \"<chr>\" data types in certain columns is attributed to the inclusion of \"?\" as placeholders for unknown values. In order to facilitate appropriate data type assignment, we undertake a meticulous data cleaning process wherein these \"?\" entries are systematically replaced with NA values.\n",
+    "\n",
+    "Furthermore, to enhance the clinical relevance of our analysis, a binary diagnostic column, denoted as \"diag,\" is introduced. While the existing variable \"num\" categorizes heart disease by severity, with 0 indicating the absence of the condition, the \"diag\" variable transcends severity levels. It serves the purpose of classifying patients into two categories—those with or without heart disease. This binary classification, irrespective of disease severity, is imperative in practical healthcare scenarios, as it prompts medical attention and potential treatment recommendations for any manifestation of heart disease. The introduction of the \"diag\" column underscores the translational utility of our analysis in real-world healthcare contexts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "954ba9e0-d854-4b10-8df2-a5df7d07851d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 6 × 15</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>age</th><th scope=col>sex</th><th scope=col>cp</th><th scope=col>trestbps</th><th scope=col>chol</th><th scope=col>fbs</th><th scope=col>restecg</th><th scope=col>thalach</th><th scope=col>exang</th><th scope=col>oldpeak</th><th scope=col>slope</th><th scope=col>ca</th><th scope=col>thal</th><th scope=col>num</th><th scope=col>diag</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>28</td><td>1</td><td>2</td><td>130</td><td>132</td><td>0</td><td>2</td><td>185</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>29</td><td>1</td><td>2</td><td>120</td><td>243</td><td>0</td><td>0</td><td>160</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>29</td><td>1</td><td>2</td><td>140</td><td>NA </td><td>0</td><td>0</td><td>170</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>30</td><td>0</td><td>1</td><td>170</td><td>237</td><td>0</td><td>1</td><td>170</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>6 </td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>31</td><td>0</td><td>2</td><td>100</td><td>219</td><td>0</td><td>1</td><td>150</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>32</td><td>0</td><td>2</td><td>105</td><td>198</td><td>0</td><td>0</td><td>165</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 15\n",
+       "\\begin{tabular}{lllllllllllllll}\n",
+       " age & sex & cp & trestbps & chol & fbs & restecg & thalach & exang & oldpeak & slope & ca & thal & num & diag\\\\\n",
+       " <dbl> & <fct> & <fct> & <chr> & <chr> & <fct> & <fct> & <chr> & <fct> & <dbl> & <fct> & <fct> & <fct> & <fct> & <fct>\\\\\n",
+       "\\hline\n",
+       "\t 28 & 1 & 2 & 130 & 132 & 0 & 2 & 185 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\t 29 & 1 & 2 & 120 & 243 & 0 & 0 & 160 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\t 29 & 1 & 2 & 140 & NA  & 0 & 0 & 170 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\t 30 & 0 & 1 & 170 & 237 & 0 & 1 & 170 & 0 & 0 & NA & NA & 6  & 0 & FALSE\\\\\n",
+       "\t 31 & 0 & 2 & 100 & 219 & 0 & 1 & 150 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\t 32 & 0 & 2 & 105 & 198 & 0 & 0 & 165 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 15\n",
+       "\n",
+       "| age &lt;dbl&gt; | sex &lt;fct&gt; | cp &lt;fct&gt; | trestbps &lt;chr&gt; | chol &lt;chr&gt; | fbs &lt;fct&gt; | restecg &lt;fct&gt; | thalach &lt;chr&gt; | exang &lt;fct&gt; | oldpeak &lt;dbl&gt; | slope &lt;fct&gt; | ca &lt;fct&gt; | thal &lt;fct&gt; | num &lt;fct&gt; | diag &lt;fct&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 28 | 1 | 2 | 130 | 132 | 0 | 2 | 185 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "| 29 | 1 | 2 | 120 | 243 | 0 | 0 | 160 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "| 29 | 1 | 2 | 140 | NA  | 0 | 0 | 170 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "| 30 | 0 | 1 | 170 | 237 | 0 | 1 | 170 | 0 | 0 | NA | NA | 6  | 0 | FALSE |\n",
+       "| 31 | 0 | 2 | 100 | 219 | 0 | 1 | 150 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "| 32 | 0 | 2 | 105 | 198 | 0 | 0 | 165 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  age sex cp trestbps chol fbs restecg thalach exang oldpeak slope ca thal num\n",
+       "1 28  1   2  130      132  0   2       185     0     0       NA    NA NA   0  \n",
+       "2 29  1   2  120      243  0   0       160     0     0       NA    NA NA   0  \n",
+       "3 29  1   2  140      NA   0   0       170     0     0       NA    NA NA   0  \n",
+       "4 30  0   1  170      237  0   1       170     0     0       NA    NA 6    0  \n",
+       "5 31  0   2  100      219  0   1       150     0     0       NA    NA NA   0  \n",
+       "6 32  0   2  105      198  0   0       165     0     0       NA    NA NA   0  \n",
+       "  diag \n",
+       "1 FALSE\n",
+       "2 FALSE\n",
+       "3 FALSE\n",
+       "4 FALSE\n",
+       "5 FALSE\n",
+       "6 FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "set.seed(1)\n",
+    "# assigning col names\n",
+    "hungarian_clean <- hungarian_data\n",
+    "\n",
+    "colnames(hungarian_clean) <- c(\"age\", \"sex\", \"cp\", \"trestbps\", \"chol\", \"fbs\", \"restecg\", \n",
+    "                               \"thalach\", \"exang\", \"oldpeak\", \"slope\", \"ca\", \"thal\", \"num\")\n",
+    "                           \n",
+    "# changing \"?\" into NA\n",
+    "hungarian_clean[ hungarian_clean == \"?\" ] <- NA\n",
+    "\n",
+    "# adding diag column, setting col types\n",
+    "# as.integer is being used to get rid of decimal points when switching to factor\n",
+    "hungarian_clean <- hungarian_clean |>\n",
+    "                    mutate(diag = as.factor(ifelse(is.na(num), NA, (num > 0)))) |>\n",
+    "                    mutate(sex = as.factor(as.integer(sex)), cp = as.factor(as.integer(cp)), \n",
+    "                            fbs = as.factor(as.integer(fbs)), restecg = as.factor(as.integer(restecg)),\n",
+    "                            exang = as.factor(as.integer(exang)), thal = as.factor(as.integer(thal)),\n",
+    "                            ca = as.factor(as.integer(ca)), slope = as.factor(as.integer(slope))) |>\n",
+    "                     mutate(num = as_factor(num))\n",
+    "\n",
+    "head(hungarian_clean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc071696-c13a-48a6-baa1-1abf7130ce23",
+   "metadata": {},
+   "source": [
+    "figure 2\n",
+    "\n",
+    "Now our data is clean and tidy!\n",
+    "\n",
+    "Since num uses integers to distinguish presence (1,2,3,4) from absence (0), and we want to determine whether or not a patient has heart disease, a new boolean column diag has been appended to narrow diagnoses down to TRUE or FALSE. To be able to stratify by it, we made it a factor column."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9af3706-7866-4e3e-b1b3-508a3aeba9e8",
+   "metadata": {},
+   "source": [
+    "#### Splitting our data into training and testing sets\n",
+    "\n",
+    "Before working on our model, we need to split our data into training and testing sets. Since we want to predict the new column diag, we will be stratifying by it.\n",
+    "\n",
+    "We will use initial_split to split our dataframe into 75% training and 25% testing, since it shuffles our data for us and ensures an constant proportion of each class is present in both. The 75-25 split allows us to train our model on as many data points as possible while also keeping enough data for effective testing later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e9d68cdb-af3a-4a8e-886e-653ea007945b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 6 × 15</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>age</th><th scope=col>sex</th><th scope=col>cp</th><th scope=col>trestbps</th><th scope=col>chol</th><th scope=col>fbs</th><th scope=col>restecg</th><th scope=col>thalach</th><th scope=col>exang</th><th scope=col>oldpeak</th><th scope=col>slope</th><th scope=col>ca</th><th scope=col>thal</th><th scope=col>num</th><th scope=col>diag</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>28</td><td>1</td><td>2</td><td>130</td><td>132</td><td>0</td><td>2</td><td>185</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>29</td><td>1</td><td>2</td><td>120</td><td>243</td><td>0</td><td>0</td><td>160</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>32</td><td>1</td><td>2</td><td>110</td><td>225</td><td>0</td><td>0</td><td>184</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>34</td><td>0</td><td>2</td><td>130</td><td>161</td><td>0</td><td>0</td><td>190</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>35</td><td>0</td><td>1</td><td>120</td><td>160</td><td>0</td><td>1</td><td>185</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "\t<tr><td>35</td><td>0</td><td>4</td><td>140</td><td>167</td><td>0</td><td>0</td><td>150</td><td>0</td><td>0</td><td>NA</td><td>NA</td><td>NA</td><td>0</td><td>FALSE</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 15\n",
+       "\\begin{tabular}{lllllllllllllll}\n",
+       " age & sex & cp & trestbps & chol & fbs & restecg & thalach & exang & oldpeak & slope & ca & thal & num & diag\\\\\n",
+       " <dbl> & <fct> & <fct> & <chr> & <chr> & <fct> & <fct> & <chr> & <fct> & <dbl> & <fct> & <fct> & <fct> & <fct> & <fct>\\\\\n",
+       "\\hline\n",
+       "\t 28 & 1 & 2 & 130 & 132 & 0 & 2 & 185 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\t 29 & 1 & 2 & 120 & 243 & 0 & 0 & 160 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\t 32 & 1 & 2 & 110 & 225 & 0 & 0 & 184 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\t 34 & 0 & 2 & 130 & 161 & 0 & 0 & 190 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\t 35 & 0 & 1 & 120 & 160 & 0 & 1 & 185 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\t 35 & 0 & 4 & 140 & 167 & 0 & 0 & 150 & 0 & 0 & NA & NA & NA & 0 & FALSE\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 15\n",
+       "\n",
+       "| age &lt;dbl&gt; | sex &lt;fct&gt; | cp &lt;fct&gt; | trestbps &lt;chr&gt; | chol &lt;chr&gt; | fbs &lt;fct&gt; | restecg &lt;fct&gt; | thalach &lt;chr&gt; | exang &lt;fct&gt; | oldpeak &lt;dbl&gt; | slope &lt;fct&gt; | ca &lt;fct&gt; | thal &lt;fct&gt; | num &lt;fct&gt; | diag &lt;fct&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 28 | 1 | 2 | 130 | 132 | 0 | 2 | 185 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "| 29 | 1 | 2 | 120 | 243 | 0 | 0 | 160 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "| 32 | 1 | 2 | 110 | 225 | 0 | 0 | 184 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "| 34 | 0 | 2 | 130 | 161 | 0 | 0 | 190 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "| 35 | 0 | 1 | 120 | 160 | 0 | 1 | 185 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "| 35 | 0 | 4 | 140 | 167 | 0 | 0 | 150 | 0 | 0 | NA | NA | NA | 0 | FALSE |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  age sex cp trestbps chol fbs restecg thalach exang oldpeak slope ca thal num\n",
+       "1 28  1   2  130      132  0   2       185     0     0       NA    NA NA   0  \n",
+       "2 29  1   2  120      243  0   0       160     0     0       NA    NA NA   0  \n",
+       "3 32  1   2  110      225  0   0       184     0     0       NA    NA NA   0  \n",
+       "4 34  0   2  130      161  0   0       190     0     0       NA    NA NA   0  \n",
+       "5 35  0   1  120      160  0   1       185     0     0       NA    NA NA   0  \n",
+       "6 35  0   4  140      167  0   0       150     0     0       NA    NA NA   0  \n",
+       "  diag \n",
+       "1 FALSE\n",
+       "2 FALSE\n",
+       "3 FALSE\n",
+       "4 FALSE\n",
+       "5 FALSE\n",
+       "6 FALSE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "220"
+      ],
+      "text/latex": [
+       "220"
+      ],
+      "text/markdown": [
+       "220"
+      ],
+      "text/plain": [
+       "[1] 220"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "74"
+      ],
+      "text/latex": [
+       "74"
+      ],
+      "text/markdown": [
+       "74"
+      ],
+      "text/plain": [
+       "[1] 74"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#splitting dataframe into training, testing datasets\n",
+    "hungarian_split <- initial_split(hungarian_clean, prop = 3/4, strata = diag)\n",
+    "\n",
+    "hungarian_training <- training(hungarian_split)\n",
+    "hungarian_testing <- testing(hungarian_split)\n",
+    "\n",
+    "head(hungarian_training)\n",
+    "\n",
+    "nrow(hungarian_training)\n",
+    "nrow(hungarian_testing)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bd2554f-d52d-4e98-83ea-b2ef14bb2092",
+   "metadata": {},
+   "source": [
+    "figure 3\n",
+    "\n",
+    "In the above code, we split the data into a training set to build our model on, and a testing set to, well, test it. Using initial_split allowed us to shuffle the data before splitting (removing bias and order) and stratify the data by diag so that an equal proportion of each is in each set.\n",
+    "\n",
+    "There are 220 rows (75%) in the training set and 74 rows (25%) in the testing set. This gives us enough data to train the classifier on, as well as enough to test it on later. This means our classifier is going to be reliable.\n",
+    "\n",
+    "Moving forward, we will only use the training set until the very end."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dd13770-3d7a-445a-b7a5-8ff1cbecca1f",
+   "id": "dfca2492-5295-48c6-bdda-652410960d4a",
    "metadata": {},
    "outputs": [],
    "source": []
