Update the data

--- a/Group Project Report-Copy1.ipynb
+++ b/Group Project Report-Copy1.ipynb
@@ -201,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8622fa17-da37-4bfd-80a5-5686d83a6025",
+   "execution_count": 10,
+   "id": "9ad516ac-dfd0-4ce2-a875-5baf7c0598a5",
    "metadata": {
     "tags": []
    },
@@ -213,9 +213,8 @@
      "text": [
       "\u001b[1mRows: \u001b[22m\u001b[34m294\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m14\u001b[39m\n",
       "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
-      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
-      "\u001b[31mchr\u001b[39m (9): X4, X5, X6, X7, X8, X9, X11, X12, X13\n",
-      "\u001b[32mdbl\u001b[39m (5): X1, X2, X3, X10, X14\n",
+      "\u001b[1mDelimiter:\u001b[22m \" \"\n",
+      "\u001b[32mdbl\u001b[39m (14): X1, X2, X3, X4, X5, X6, X7, X8, X9, X10, X11, X12, X13, X14\n",
       "\n",
       "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
       "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
@@ -301,8 +300,8 @@
     }
    ],
    "source": [
-    "hungarian_data <- read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/processed.hungarian.data\",\n",
-    "                          col_names = FALSE)\n",
+    "url <- \"https://archive.ics.uci.edu/ml/machine-learning-databases/heart-disease/reprocessed.hungarian.data\"\n",
+    "hungarian_read <- read_delim(url, delim = \" \", col_names = FALSE)\n",
     "\n",
     "head(hungarian_data)\n",
     "\n",
@@ -337,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "954ba9e0-d854-4b10-8df2-a5df7d07851d",
    "metadata": {
     "tags": []
@@ -461,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "e9d68cdb-af3a-4a8e-886e-653ea007945b",
    "metadata": {
     "tags": []
@@ -618,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "9aa1f895-37e4-49c8-9730-120d0aa806e3",
    "metadata": {
     "tags": []
